@@ -1,3 +1,8 @@
+2009-03-24  David Moore  <dcm@acm.org>
+
+	* libiptcdata/iptc-dataset.c: Check for NULL tag name in
+	iptc_dataset_dump.  From Roger Hakansson.
+
 2008-12-08  Ian Wienand  <ianw@debian.org>
 
 	* python/pyiptcdataset.c: Don't poke around inside datastructures
